# python-code

./: .gitignore  .pre-commit-config.yaml  .ruff.desired.toml  .ruff.toml  README.md  pyproject.toml
.github/: copilot-feedback-instructions.md  copilot-generation-instructions.md  text.py
.github/actions/setup-ci/: action.yml
.github/workflows/: ci.yml
.presentations/: rust_python.md
.presentations/08072024_renaming_on_steroids/: basket.py  dish.py  dish_knedlik.py  dish_pasta.py  index.html  volume.py
.presentations/rust_python/: reveal-md.json  rust_python.md
.presentations/rust_python/_static/: index.html
src/_pieces/: __init__.py  calculator.py  numbers.txt
src/about_venv/: venv.md
src/clock_angle/: angle.py  angle_without_doctest.py
src/essentials/01_modules/00_module_as_file/: common.py  main.py
src/essentials/01_modules/01_module_as_directory/: main.py
src/essentials/01_modules/01_module_as_directory/common/: __init__.py  _subtract.py  add.py
src/essentials/02_names/: main.py
src/essentials/03_more_of_names/: __init__.py  bad.py  good.py
src/essentials/04_global_variables/: 00_data.csv  __main__.py  divisions.py  reader.py  settings.py
src/essentials/05_patterns/: decorator_pattern.py  decorator_pattern_2.py  observer_pattern.py
src/optimization/: palindrome.py  sum_of_squares.py
src/parallel_tests/: test_parallel.py
src/profiling/: README.md  primes.py  primes_faster.py
src/sample_python/: __init__.py
src/simple_fastapi/: main.py
tests/clock_angle/: test_angle.py
tests/simple_fastapi/: test_main.py
