[project]
name = "python-samples"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi[uvicorn]>=0.100.0",
    "bandit>=1.7.5",
    "uvicorn[standard]>=0.23.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.mypy]
exclude = [".venv"]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "ruff>=0.0.280",
    "pre-commit>=3.3.3",
    "bandit>=1.7.5",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.4.1",
    "httpx>=0.24.1",
]

[tool.hatch.metadata]
allow-direct-references = true
