[project]
name = "python-samples"
version = "0.1.0"
description = "Monorepo for my Python code samples for talks, presentations, workshops, demos."
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.27.2",
    "uvicorn[standard]>=0.23.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_samples"]
# Formatters and linters

# NOTE: All Ruff rules sets are listed below. For ruff==0.0.280

[tool.mypy]
exclude = [".venv"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.0.280",
    "pre-commit>=3.3.3",
    "bandit>=1.7.5",
    "pytest>=7.4.0",
    "mypy>=1.4.1",
    "httpx>=0.24.1",
    "ipython>=8.12.2",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pyinstrument>=4.7.3",
    "snakeviz>=2.2.0",
]
